--- a/research.html
+++ b/research.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Research</title>
+      <title>研究</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Zhaohui Qin's Lab, Research, Emory University">
+      <meta name="description" content="Liu Lab,Research,HUST">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,14 +20,14 @@
                <div class="navbar-inner">
                   <div class="container">
                      <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="people.html">People</a></li>
-                        <li class="active"><a href="#">Research</a></li>
-                        <li><a href="publications.html">Publications</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-			<li><a href="software.html">Software</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
-			<li><a href="contact.html">Join Us</a></li>
+                        <li><a href="index.html">主页</a></li>
+                        <li><a href="people.html">成员</a></li>
+                        <li class="active"><a href="#">研究</a></li>
+                        <li><a href="publications.html">发表文献</a></li>
+			               <li><a href="gallery.html">风采</a></li>
+                        <li><a href="software.html">常用链接</a></li>
+                        <li><a href="teaching.html">实验室资源</a></li>
+                        <li><a href="contact.html">招聘</a></li>
                      </ul>
                   </div>
                </div>
@@ -37,35 +37,135 @@
          <div class="row-fluid">
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
-                  <!--
-                  <li><a href="#statemet"> Lorem Ipsum </a></li>
-                  <li><a href="#nano"> Enim Raesent Elementum </a></li>
-                  <li><a class="subhead" href="#Penatibus"> Penatibus </a></li>
-                  <li><a class="subhead" href="#QuamIdLeo"> Quam Id Leo  </a></li>
-                  <li><a class="subhead" href="#Ullamcorper"> Ullamcorper </a></li>
-                  <li><a href="#Facilisis">Facilisis</a></li>
-                  <li><a class="subhead" href="#Volutpat"> Volutpat </a></li>
-                  <li><a class="subhead" href="#ElementumTempus"> Elementum Tempus </a></li>
-                  <li><a class="subhead" href="#FacilisisMagna"> Facilisis Magna </a></li>
-                  -->
-                  <li><a href="#Bioinfo"> Bioinformatics </a></li>
-                  <li><a class="subhead" href="#Penatibus"> Penatibus </a></li>
-                  <li><a class="subhead" href="#QuamIdLeo"> Quam Id Leo  </a></li>
-                  <li><a href="#StatModel"> Statistical Modeling </a></li>
-                  <li><a href="#Epigen"> Epigenetics </a></li>
-                  <li><a href="#Gene"> Genetics </a></li>
-                  <li><a href="#Geno"> Genomics </a></li>
+                  <li><a href="#Pathogen"> 病原菌 </a></li>
+                  <li><a class="subhead" href="#people"> 成员 </a></li>
+                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
+                  <li><a href="#interaction"> 肠道微生物相互作用 </a></li>
+                  <li><a class="subhead" href="#people"> 成员 </a></li>
+                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
+                  <li><a href="#Cultivating Omics"> 培养组学 </a></li>
+                  <li><a class="subhead" href="#people"> 成员 </a></li>
+                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
+                  <li><a href="#phage"> 噬菌体分离改造 </a></li>
+                  <li><a class="subhead" href="#people"> 成员 </a></li>
+                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
+                  <li><a href="#Synthetic biology"> 合成生物学 </a></li>
+                  <li><a class="subhead" href="#people"> 成员 </a></li>
+                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
                </ul>
             </div>
             <div class="span8 offset1">
-               <section id="Bioinfo">
+               <section id="Pathogen">
                   <div class="page-header">
-                     <h3>Bioinformatics</h3>
+                     <h3>病原菌</h3>
                      <hr>
                      <p>...
                      </p>
                   </div>
                </section>
+               <section id="nano">
+                  <div class="page-header">
+                     <h3>Enim Raesent Elementum</h3>
+                  </div>
+                  <div class="row-fluid">
+                     <div class="span12">
+                        <section id="Penatibus">
+                           <h4>Penatibus</h4>
+                           <br/>
+                           <img src="images/scientist-with-petri-dish.jpg" class="float-right" alt="Penatibus"/>
+                           <p>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                              tempor incididunt ut labore et dolore magna aliqua. Et sollicitudin ac 
+                              orci phasellus egestas tellus rutrum tellus pellentesque. Lectus mauris 
+                              ultrices eros in cursus turpis. Egestas dui id ornare arcu odio ut. At 
+                              augue eget arcu dictum varius duis at consectetur lorem. Dictum sit amet 
+                              justo donec. Est ante in nibh mauris cursus mattis molestie. Ac feugiat 
+                              sed lectus vestibulum mattis ullamcorper. Enim sit amet venenatis urna 
+                              cursus eget nunc scelerisque viverra. Eget mauris pharetra et ultrices.
+                           </p>
+                           <p>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                              tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed 
+                              egestas egestas fringilla phasellus faucibus scelerisque eleifend. Mi 
+                              proin sed libero enim sed faucibus turpis in. Volutpat sed cras ornare 
+                              arcu dui vivamus arcu felis bibendum. Non consectetur a erat nam at lectus 
+                              urna. Risus feugiat in ante metus dictum at. Cras sed felis eget velit 
+                              aliquet sagittis id. Turpis massa tincidunt dui ut ornare lectus sit amet. 
+                              Lectus sit amet est placerat. Risus at ultrices mi tempus. 
+                           </p>
+                        </section>
+                        <hr>
+                        <section id="QuamIdLeo">
+                           <h4>Quam Id Leo</h4>
+                           <br/>
+                           <img src="images/brainstorming-paper.jpg" class="float-right" alt="Quam Id Leo"/>
+                           <p>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                              tempor incididunt ut labore et dolore magna aliqua. Mollis aliquam ut 
+                              porttitor leo. Sed faucibus turpis in eu mi bibendum neque. Ut tortor 
+                              pretium viverra suspendisse. Posuere morbi leo urna molestie. Sed nisi 
+                              lacus sed viverra tellus in hac habitasse. Diam maecenas sed enim ut sem. 
+                              Congue nisi vitae suscipit tellus mauris a diam maecenas. Leo in vitae 
+                              turpis massa sed. Turpis egestas integer eget aliquet nibh. Molestie 
+                              nunc non blandit massa enim nec dui. Tempus iaculis urna id volutpat lacus.
+                           </p>
+                           <p>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                              tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed 
+                              egestas egestas fringilla phasellus. In arcu cursus euismod quis viverra 
+                              nibh. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a. Nisl 
+                              purus in mollis nunc sed id. Nisi porta lorem mollis aliquam ut porttitor. 
+                              Pharetra sit amet aliquam id diam. Duis convallis convallis tellus id 
+                              interdum. Integer malesuada nunc vel risus commodo. Porttitor massa id 
+                              neque aliquam vestibulum morbi blandit. Dolor magna eget est lorem ipsum 
+                              dolor. Vel facilisis volutpat est velit egestas dui id. Mattis pellentesque 
+                              id nibh tortor id aliquet lectus. Imperdiet proin fermentum leo vel orci 
+                              porta non pulvinar. Habitant morbi tristique senectus et netus et. Id aliquet 
+                              lectus proin nibh nisl condimentum id.
+                           </p>
+                        </section>
+                        <hr>
+                        <section id="Ullamcorper">
+                           <h4>Ullamcorper</h4>
+                           <br/>
+                           <img src="images/man-with-microscope.jpg" class="float-right" alt="Ullamcorper"/>
+                           <p>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                              eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis 
+                              hendrerit dolor magna eget est lorem ipsum dolor sit. Id ornare 
+                              arcu odio ut. At lectus urna duis convallis convallis. Fermentum 
+                              posuere urna nec tincidunt praesent semper. Ullamcorper dignissim 
+                              cras tincidunt lobortis feugiat vivamus. Eget lorem dolor sed 
+                              viverra ipsum nunc aliquet bibendum. Enim lobortis scelerisque 
+                              fermentum dui faucibus in ornare. Proin nibh nisl condimentum id 
+                              venenatis a. Ipsum dolor sit amet consectetur adipiscing elit 
+                              pellentesque.
+                           </p>
+                           <p>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+                              do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                              Sit amet mauris commodo quis. Nisl rhoncus mattis rhoncus urna 
+                              neque viverra justo. Ut tortor pretium viverra suspendisse. Eu 
+                              scelerisque felis imperdiet proin fermentum leo vel. Nunc sed 
+                              velit dignissim sodales ut. Elit pellentesque habitant morbi 
+                              tristique senectus et. Dictumst vestibulum rhoncus est 
+                              pellentesque elit ullamcorper. Tincidunt dui ut ornare lectus 
+                              sit amet. 
+                           </p>
+                           <p>
+                              Magna fringilla urna porttitor rhoncus dolor purus non enim. 
+                              Amet consectetur adipiscing elit pellentesque habitant morbi. 
+                              Ipsum dolor sit amet consectetur adipiscing elit ut. Dolor morbi 
+                              non arcu risus quis varius quam quisque id. Cras tincidunt lobortis 
+                              feugiat vivamus. Lorem ipsum dolor sit amet consectetur adipiscing 
+                              elit duis. Accumsan tortor posuere ac ut consequat semper viverra. 
+                              Mattis nunc sed blandit libero volutpat sed.
+                           </p>
+                        </section>
+                     </div>
+                  </div>
+               </section>
+               <hr>
                <hr>
             </div>
          </div>
