--- a/research.html
+++ b/research.html
@@ -58,114 +58,152 @@
                <section id="Pathogen">
                   <div class="page-header">
                      <h3>病原菌</h3>
-                     <hr>
-                     <p>...
-                     </p>
-                  </div>
-               </section>
-               <section id="nano">
-                  <div class="page-header">
-                     <h3>Enim Raesent Elementum</h3>
                   </div>
                   <div class="row-fluid">
                      <div class="span12">
-                        <section id="Penatibus">
-                           <h4>Penatibus</h4>
+                        <section id="people">
+                           <h4>成员</h4>
                            <br/>
-                           <img src="images/scientist-with-petri-dish.jpg" class="float-right" alt="Penatibus"/>
                            <p>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                              tempor incididunt ut labore et dolore magna aliqua. Et sollicitudin ac 
-                              orci phasellus egestas tellus rutrum tellus pellentesque. Lectus mauris 
-                              ultrices eros in cursus turpis. Egestas dui id ornare arcu odio ut. At 
-                              augue eget arcu dictum varius duis at consectetur lorem. Dictum sit amet 
-                              justo donec. Est ante in nibh mauris cursus mattis molestie. Ac feugiat 
-                              sed lectus vestibulum mattis ullamcorper. Enim sit amet venenatis urna 
-                              cursus eget nunc scelerisque viverra. Eget mauris pharetra et ultrices.
-                           </p>
-                           <p>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                              tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed 
-                              egestas egestas fringilla phasellus faucibus scelerisque eleifend. Mi 
-                              proin sed libero enim sed faucibus turpis in. Volutpat sed cras ornare 
-                              arcu dui vivamus arcu felis bibendum. Non consectetur a erat nam at lectus 
-                              urna. Risus feugiat in ante metus dictum at. Cras sed felis eget velit 
-                              aliquet sagittis id. Turpis massa tincidunt dui ut ornare lectus sit amet. 
-                              Lectus sit amet est placerat. Risus at ultrices mi tempus. 
+                              XXX,XXX,XXX 
                            </p>
                         </section>
                         <hr>
-                        <section id="QuamIdLeo">
-                           <h4>Quam Id Leo</h4>
+                        <section id="content">
+                           <h4>研究方向</h4>
                            <br/>
-                           <img src="images/brainstorming-paper.jpg" class="float-right" alt="Quam Id Leo"/>
+                           <img src="images/.jpg" class="float-right" alt="Pathogen"/>
                            <p>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                              tempor incididunt ut labore et dolore magna aliqua. Mollis aliquam ut 
-                              porttitor leo. Sed faucibus turpis in eu mi bibendum neque. Ut tortor 
-                              pretium viverra suspendisse. Posuere morbi leo urna molestie. Sed nisi 
-                              lacus sed viverra tellus in hac habitasse. Diam maecenas sed enim ut sem. 
-                              Congue nisi vitae suscipit tellus mauris a diam maecenas. Leo in vitae 
-                              turpis massa sed. Turpis egestas integer eget aliquet nibh. Molestie 
-                              nunc non blandit massa enim nec dui. Tempus iaculis urna id volutpat lacus.
+                             病原菌是研究 
                            </p>
                            <p>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                              tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed 
-                              egestas egestas fringilla phasellus. In arcu cursus euismod quis viverra 
-                              nibh. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a. Nisl 
-                              purus in mollis nunc sed id. Nisi porta lorem mollis aliquam ut porttitor. 
-                              Pharetra sit amet aliquam id diam. Duis convallis convallis tellus id 
-                              interdum. Integer malesuada nunc vel risus commodo. Porttitor massa id 
-                              neque aliquam vestibulum morbi blandit. Dolor magna eget est lorem ipsum 
-                              dolor. Vel facilisis volutpat est velit egestas dui id. Mattis pellentesque 
-                              id nibh tortor id aliquet lectus. Imperdiet proin fermentum leo vel orci 
-                              porta non pulvinar. Habitant morbi tristique senectus et netus et. Id aliquet 
-                              lectus proin nibh nisl condimentum id.
+                             目前已经 
                            </p>
                         </section>
                         <hr>
-                        <section id="Ullamcorper">
-                           <h4>Ullamcorper</h4>
-                           <br/>
-                           <img src="images/man-with-microscope.jpg" class="float-right" alt="Ullamcorper"/>
-                           <p>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                              eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis 
-                              hendrerit dolor magna eget est lorem ipsum dolor sit. Id ornare 
-                              arcu odio ut. At lectus urna duis convallis convallis. Fermentum 
-                              posuere urna nec tincidunt praesent semper. Ullamcorper dignissim 
-                              cras tincidunt lobortis feugiat vivamus. Eget lorem dolor sed 
-                              viverra ipsum nunc aliquet bibendum. Enim lobortis scelerisque 
-                              fermentum dui faucibus in ornare. Proin nibh nisl condimentum id 
-                              venenatis a. Ipsum dolor sit amet consectetur adipiscing elit 
-                              pellentesque.
-                           </p>
-                           <p>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-                              do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                              Sit amet mauris commodo quis. Nisl rhoncus mattis rhoncus urna 
-                              neque viverra justo. Ut tortor pretium viverra suspendisse. Eu 
-                              scelerisque felis imperdiet proin fermentum leo vel. Nunc sed 
-                              velit dignissim sodales ut. Elit pellentesque habitant morbi 
-                              tristique senectus et. Dictumst vestibulum rhoncus est 
-                              pellentesque elit ullamcorper. Tincidunt dui ut ornare lectus 
-                              sit amet. 
-                           </p>
-                           <p>
-                              Magna fringilla urna porttitor rhoncus dolor purus non enim. 
-                              Amet consectetur adipiscing elit pellentesque habitant morbi. 
-                              Ipsum dolor sit amet consectetur adipiscing elit ut. Dolor morbi 
-                              non arcu risus quis varius quam quisque id. Cras tincidunt lobortis 
-                              feugiat vivamus. Lorem ipsum dolor sit amet consectetur adipiscing 
-                              elit duis. Accumsan tortor posuere ac ut consequat semper viverra. 
-                              Mattis nunc sed blandit libero volutpat sed.
-                           </p>
-                        </section>
                      </div>
                   </div>
                </section>
                <hr>
+               <section id="interaction">
+                  <div class="page-header">
+                     <h3>肠道微生物相互作用</h3>
+                  </div>
+                  <div class="row-fluid">
+                     <div class="span12">
+                        <section id="people">
+                           <h4>成员</h4>
+                           <br/>
+                           <p>
+                              XXX,XXX,XXX 
+                           </p>
+                        </section>
+                        <hr>
+                        <section id="content">
+                           <h4>研究方向</h4>
+                           <br/>
+                           <img src="images/.jpg" class="float-right" alt="interaction"/>
+                           <p>
+                              肠道微生物相互作用是研究 
+                           </p>
+                           <p>
+                             目前已经 
+                           </p>
+                        </section>
+                        <hr>
+                     </div>
+                  </div>
+               </section>
+               <hr>
+               <section id="Cultivating Omics">
+                  <div class="page-header">
+                     <h3>培养组学</h3>
+                  </div>
+                  <div class="row-fluid">
+                     <div class="span12">
+                        <section id="people">
+                           <h4>成员</h4>
+                           <br/>
+                           <p>
+                              XXX,XXX,XXX 
+                           </p>
+                        </section>
+                        <hr>
+                        <section id="content">
+                           <h4>研究方向</h4>
+                           <br/>
+                           <img src="images/ .jpg" class="float-right" alt="Cultivating Omics"/>
+                           <p>
+                             培养组学是研究 
+                           </p>
+                           <p>
+                             目前已经 
+                           </p>
+                        </section>
+                        <hr>
+                     </div>
+                  </div>
+               </section>
+               <hr>
+               <section id="phage">
+                  <div class="page-header">
+                     <h3>噬菌体分离改造 </h3>
+                  </div>
+                  <div class="row-fluid">
+                     <div class="span12">
+                        <section id="people">
+                           <h4>成员</h4>
+                           <br/>
+                           <p>
+                              XXX,XXX,XXX 
+                           </p>
+                        </section>
+                        <hr>
+                        <section id="content">
+                           <h4>研究方向</h4>
+                           <br/>
+                           <img src="images/ .jpg" class="float-right" alt="phage"/>
+                           <p>
+                             噬菌体分离改造是研究 
+                           </p>
+                           <p>
+                             目前已经 
+                           </p>
+                        </section>
+                        <hr>
+                     </div>
+                  </div>
+               </section>
+               <hr>
+               <section id="Synthetic biology">
+                  <div class="page-header">
+                     <h3>合成生物学 </h3>
+                  </div>
+                  <div class="row-fluid">
+                     <div class="span12">
+                        <section id="people">
+                           <h4>成员</h4>
+                           <br/>
+                           <p>
+                              XXX,XXX,XXX 
+                           </p>
+                        </section>
+                        <hr>
+                        <section id="content">
+                           <h4>研究方向</h4>
+                           <br/>
+                           <img src="images/ " class="float-right" alt="Synthetic biology"/>
+                           <p>
+                             合成生物学是研究 
+                           </p>
+                           <p>
+                             目前已经 
+                           </p>
+                        </section>
+                        <hr>
+                     </div>
+                  </div>
+               </section>
                <hr>
             </div>
          </div>
