--- a/research.html
+++ b/research.html
@@ -38,20 +38,20 @@
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                   <li><a href="#Pathogen"> 病原菌 </a></li>
-                  <li><a class="subhead" href="#people"> 成员 </a></li>
-                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people1"> 成员 </a></li>
+                  <li><a class="subhead" href="#content1"> 研究方向  </a></li>
                   <li><a href="#interaction"> 肠道微生物相互作用 </a></li>
-                  <li><a class="subhead" href="#people"> 成员 </a></li>
-                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people2"> 成员 </a></li>
+                  <li><a class="subhead" href="#content2"> 研究方向  </a></li>
                   <li><a href="#Cultivating Omics"> 培养组学 </a></li>
-                  <li><a class="subhead" href="#people"> 成员 </a></li>
-                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people3"> 成员 </a></li>
+                  <li><a class="subhead" href="#content3"> 研究方向  </a></li>
                   <li><a href="#phage"> 噬菌体分离改造 </a></li>
-                  <li><a class="subhead" href="#people"> 成员 </a></li>
-                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people4"> 成员 </a></li>
+                  <li><a class="subhead" href="#content4"> 研究方向  </a></li>
                   <li><a href="#Synthetic biology"> 合成生物学 </a></li>
-                  <li><a class="subhead" href="#people"> 成员 </a></li>
-                  <li><a class="subhead" href="#content"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people5"> 成员 </a></li>
+                  <li><a class="subhead" href="#content5"> 研究方向  </a></li>
                </ul>
             </div>
             <div class="span8 offset1">
@@ -61,7 +61,7 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span12">
-                        <section id="people">
+                        <section id="people1">
                            <h4>成员</h4>
                            <br/>
                            <p>
@@ -69,7 +69,7 @@
                            </p>
                         </section>
                         <hr>
-                        <section id="content">
+                        <section id="content1">
                            <h4>研究方向</h4>
                            <br/>
                            <img src="images/.jpg" class="float-right" alt="Pathogen"/>
@@ -91,7 +91,7 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span12">
-                        <section id="people">
+                        <section id="people2">
                            <h4>成员</h4>
                            <br/>
                            <p>
@@ -99,7 +99,7 @@
                            </p>
                         </section>
                         <hr>
-                        <section id="content">
+                        <section id="content2">
                            <h4>研究方向</h4>
                            <br/>
                            <img src="images/.jpg" class="float-right" alt="interaction"/>
@@ -121,7 +121,7 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span12">
-                        <section id="people">
+                        <section id="people3">
                            <h4>成员</h4>
                            <br/>
                            <p>
@@ -129,7 +129,7 @@
                            </p>
                         </section>
                         <hr>
-                        <section id="content">
+                        <section id="content3">
                            <h4>研究方向</h4>
                            <br/>
                            <img src="images/ .jpg" class="float-right" alt="Cultivating Omics"/>
@@ -151,7 +151,7 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span12">
-                        <section id="people">
+                        <section id="people4">
                            <h4>成员</h4>
                            <br/>
                            <p>
@@ -159,7 +159,7 @@
                            </p>
                         </section>
                         <hr>
-                        <section id="content">
+                        <section id="content4">
                            <h4>研究方向</h4>
                            <br/>
                            <img src="images/ .jpg" class="float-right" alt="phage"/>
@@ -181,7 +181,7 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span12">
-                        <section id="people">
+                        <section id="people5">
                            <h4>成员</h4>
                            <br/>
                            <p>
@@ -189,7 +189,7 @@
                            </p>
                         </section>
                         <hr>
-                        <section id="content">
+                        <section id="content5">
                            <h4>研究方向</h4>
                            <br/>
                            <img src="images/ " class="float-right" alt="Synthetic biology"/>
