--- a/research.html
+++ b/research.html
@@ -38,20 +38,20 @@
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                   <li><a href="#Pathogen"> 病原菌 </a></li>
-                  <li><a class="subhead" href="#people1"> 成员 </a></li>
-                  <li><a class="subhead" href="#content1"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people1"> group1成员 </a></li>
+                  <li><a class="subhead" href="#content1"> group1研究方向  </a></li>
                   <li><a href="#interaction"> 肠道微生物相互作用 </a></li>
-                  <li><a class="subhead" href="#people2"> 成员 </a></li>
-                  <li><a class="subhead" href="#content2"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people2"> group2成员 </a></li>
+                  <li><a class="subhead" href="#content2"> group2研究方向  </a></li>
                   <li><a href="#Cultivating Omics"> 培养组学 </a></li>
-                  <li><a class="subhead" href="#people3"> 成员 </a></li>
-                  <li><a class="subhead" href="#content3"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people3"> group3成员 </a></li>
+                  <li><a class="subhead" href="#content3"> group3研究方向  </a></li>
                   <li><a href="#phage"> 噬菌体分离改造 </a></li>
-                  <li><a class="subhead" href="#people4"> 成员 </a></li>
-                  <li><a class="subhead" href="#content4"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people4"> group4成员 </a></li>
+                  <li><a class="subhead" href="#content4"> group4研究方向  </a></li>
                   <li><a href="#Synthetic biology"> 合成生物学 </a></li>
-                  <li><a class="subhead" href="#people5"> 成员 </a></li>
-                  <li><a class="subhead" href="#content5"> 研究方向  </a></li>
+                  <li><a class="subhead" href="#people5"> group5成员 </a></li>
+                  <li><a class="subhead" href="#content5"> group5研究方向  </a></li>
                </ul>
             </div>
             <div class="span8 offset1">
@@ -62,7 +62,7 @@
                   <div class="row-fluid">
                      <div class="span12">
                         <section id="people1">
-                           <h4>成员</h4>
+                           <h4>group1成员</h4>
                            <br/>
                            <p>
                               XXX,XXX,XXX 
@@ -70,7 +70,7 @@
                         </section>
                         <hr>
                         <section id="content1">
-                           <h4>研究方向</h4>
+                           <h4>group1研究方向</h4>
                            <br/>
                            <img src="images/.jpg" class="float-right" alt="Pathogen"/>
                            <p>
@@ -92,7 +92,7 @@
                   <div class="row-fluid">
                      <div class="span12">
                         <section id="people2">
-                           <h4>成员</h4>
+                           <h4>group2成员</h4>
                            <br/>
                            <p>
                               XXX,XXX,XXX 
@@ -100,7 +100,7 @@
                         </section>
                         <hr>
                         <section id="content2">
-                           <h4>研究方向</h4>
+                           <h4>group2研究方向</h4>
                            <br/>
                            <img src="images/.jpg" class="float-right" alt="interaction"/>
                            <p>
@@ -122,7 +122,7 @@
                   <div class="row-fluid">
                      <div class="span12">
                         <section id="people3">
-                           <h4>成员</h4>
+                           <h4>group3成员</h4>
                            <br/>
                            <p>
                               XXX,XXX,XXX 
@@ -130,7 +130,7 @@
                         </section>
                         <hr>
                         <section id="content3">
-                           <h4>研究方向</h4>
+                           <h4>group3研究方向</h4>
                            <br/>
                            <img src="images/ .jpg" class="float-right" alt="Cultivating Omics"/>
                            <p>
@@ -152,7 +152,7 @@
                   <div class="row-fluid">
                      <div class="span12">
                         <section id="people4">
-                           <h4>成员</h4>
+                           <h4>group4成员</h4>
                            <br/>
                            <p>
                               XXX,XXX,XXX 
@@ -160,7 +160,7 @@
                         </section>
                         <hr>
                         <section id="content4">
-                           <h4>研究方向</h4>
+                           <h4>group4研究方向</h4>
                            <br/>
                            <img src="images/ .jpg" class="float-right" alt="phage"/>
                            <p>
@@ -182,7 +182,7 @@
                   <div class="row-fluid">
                      <div class="span12">
                         <section id="people5">
-                           <h4>成员</h4>
+                           <h4>group5成员</h4>
                            <br/>
                            <p>
                               XXX,XXX,XXX 
@@ -190,7 +190,7 @@
                         </section>
                         <hr>
                         <section id="content5">
-                           <h4>研究方向</h4>
+                           <h4>group5研究方向</h4>
                            <br/>
                            <img src="images/ " class="float-right" alt="Synthetic biology"/>
                            <p>
