--- a/publications.html
+++ b/publications.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Publications</title>
+      <title>发表文献</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Zhaohui Qin's Lab, Publications, Emory University">
+      <meta name="description" content="Liu Lab,Publications,HUST">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,14 +20,14 @@
                <div class="navbar-inner">
                   <div class="container">
                      <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="people.html">People</a></li>
-                        <li><a href="research.html">Research</a></li>
-                        <li class="active"><a href="#">Publications</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-			<li><a href="software.html">Software</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
-			<li><a href="contact.html">Join Us</a></li>
+                        <li><a href="index.html">主页</a></li>
+                        <li><a href="people.html">成员</a></li>
+                        <li><a href="research.html">研究</a></li>
+                        <li class="active"><a href="#">发表文献</a></li>
+                        <li><a href="gallery.html">风采</a></li>
+                        <li><a href="software.html">常用链接</a></li>
+                        <li><a href="teaching.html">实验室资源</a></li>
+                        <li><a href="contact.html">招聘</a></li>
                      </ul>
                   </div>
                </div>
@@ -36,6 +36,257 @@
          <hr>
          <script src="https://bibbase.org/show?bib=https%3A%2F%2Fsteve-qin-bioinfo-lab.github.io%2Fpubs.bib&jsonp=1"></script>
       </div>
+      <div class="row-fluid">
+         <div class="span3 bs-docs-sidebar" id="navparent">
+            <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
+               <li><a href="#published"> Journal Publications</a></li>
+               <li><a class="subhead" href="#2018"> 2018 </a></li>
+               <li><a class="subhead" href="#2017"> 2017 </a></li>
+               <li><a class="subhead" href="#2016"> 2016 </a></li>
+               <li><a href="#inreview"> In Review and Preparation</a></li>
+               <li><a href="#refereed"> Papers and Presentations in Refereed Conference Proceedings</a></li>
+               <li><a class="subhead" href="#2018c"> 2018 </a></li>
+               <li><a class="subhead" href="#2017c"> 2017 </a></li>
+               <li><a class="subhead" href="#2016c"> 2016 </a></li>
+            </ul>
+         </div>
+         <div class="span8 offset1">
+            <section id="published">
+               <div class="page-header">
+                  <h3>Journal Publications</h3>
+               </div>
+               <section id="2018">
+                  <h3>2018</h3>
+                  <br/>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://pubs.acs.org/journal/nalefd" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/nanoletters.2013.13.issue1.jpg" alt="Pellentesque Habitant Morbi Tristique Senectus Et"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Pellentesque Habitant Morbi Tristique Senectus Et</h4>
+                        <br/>
+                        <p>Q.E. Vulputate , E.R. Dictum, E.J. Pellentesque</p>
+                        <a href="https://pubs.acs.org/journal/nalefd">Pellentesque Habitant, in press, 2018</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://pubs.acs.org/journal/ancac3" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/ancac3.2013.7.issue-12.largecover.jpg" alt="Orci Nulla Pellentesque Dignissim"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Orci Nulla Pellentesque Dignissim</h4>
+                        <br/>
+                        <p>R. Faucibus, N. Purus, J. Quis, K. Pharetra</p>
+                        <a href="https://pubs.acs.org/journal/ancac3">ACK Ipsum, 8(10), p. 233-342, 2017</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://www.nature.com/ncomms/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/nature-communications.jpg" alt="Duis at consectetur lorem donec"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Duis at consectetur lorem donec</h4>
+                        <br/>
+                        <p>H. Enim, G. Malesuada, A.R. Morbi, R.K. Tortor</p>
+                        <a href="https://www.nature.com/ncomms/">Malesuada Fames, 5:4449, 2017</a>
+                     </div>
+                  </div>
+               </section>
+               <hr>
+               <section id="2017">
+                  <h3>2017</h3>
+                  <br/>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://pubs.acs.org/journal/ancac3" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/ancac3.2013.7.issue-12.largecover.jpg" alt="Orci Nulla Pellentesque Dignissim"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Orci Nulla Pellentesque Dignissim</h4>
+                        <br/>
+                        <p>R. Faucibus, N. Purus, J. Quis, K. Pharetra</p>
+                        <a href="https://pubs.acs.org/journal/ancac3">ACK Ipsum, 8(10), p. 233-342, 2017</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://pubs.acs.org/journal/nalefd" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/nanoletters.2013.13.issue1.jpg" alt="Pellentesque Morbi Tristique Senectus Et"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Pellentesque Morbi Tristique Senectus Et</h4>
+                        <br/>
+                        <p>Q.E. Vulputate , E.R. Dictum, E.J. Pellentesque</p>
+                        <a href="https://pubs.acs.org/journal/nalefd">Pellentesque Morbi, 2017</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://aip.scitation.org/journal/apl" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/105_1.jpg" alt="Tellus molestie nunc non blandit massa"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Tellus molestie nunc non blandit massa</h4>
+                        <br/>
+                        <p>N. Placerat, R.J. Molestie, R. Mollis, E.K. Tellus</p>
+                        <a href="https://aip.scitation.org/journal/apl">Urna Neque Viverra, 105(1), 013111, 2017</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://www.nature.com/ncomms/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/nature-communications.jpg" alt="Duis at consectetur lorem donec"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Duis at consectetur lorem donec</h4>
+                        <br/>
+                        <p>H. Enim, G. Malesuada, A.R. Morbi, R.K. Tortor</p>
+                        <a href="https://www.nature.com/ncomms/">Malesuada Fames, 5:4449, 2017</a>
+                     </div>
+                  </div>
+               </section>
+               <hr>
+               <section id="2016">
+                  <h3>2016</h3>
+                  <br/>            
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://pubs.acs.org/journal/ancac3" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/ancac3.2013.7.issue-12.largecover.jpg" alt="Orci Nulla Pellentesque Dignissim"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Orci Nulla Pellentesque Dignissim</h4>
+                        <br/>
+                        <p>R. Faucibus, N. Purus, J. Quis, K. Pharetra</p>
+                        <a href="https://pubs.acs.org/journal/ancac3">ACK Ipsum, 8(10), p. 233-342, 2016</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://pubs.acs.org/journal/nalefd" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/nanoletters.2013.13.issue1.jpg" alt="Pellentesque Morbi Tristique Senectus Et"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Pellentesque Morbi Tristique Senectus Et</h4>
+                        <br/>
+                        <p>Q.E. Vulputate , E.R. Dictum, E.J. Pellentesque</p>
+                        <a href="https://pubs.acs.org/journal/nalefd">Pellentesque Morbi, 2016</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://aip.scitation.org/journal/apl" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/105_1.jpg" alt="Tellus molestie nunc non blandit massa"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Tellus molestie nunc non blandit massa</h4>
+                        <br/>
+                        <p>N. Placerat, R.J. Molestie, R. Mollis, E.K. Tellus</p>
+                        <a href="https://aip.scitation.org/journal/apl">Urna Neque Viverra, 105(1), 013111, 2016</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://www.nature.com/ncomms/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/nature-communications.jpg" alt="Duis at consectetur lorem donec"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Duis at consectetur lorem donec</h4>
+                        <br/>
+                        <p>H. Enim, G. Malesuada, A.R. Morbi, R.K. Tortor</p>
+                        <a href="https://www.nature.com/ncomms/">Malesuada Fames, 5:4449, 2016</a>
+                     </div>
+                  </div>
+               </section>
+            </section>
+            <hr>
+            <section id="inreview">
+               <div class="page-header">
+                  <h3>In Review and Preperation</h3>
+               </div>
+               <ol>
+                  <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
+                  <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
+                  <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
+                  <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
+               </ol>
+            </section>
+            <hr>
+            <section id="refereed">
+               <div class="page-header">
+                  <h3>Papers and Presentations in Refereed Conference Proceedings</h3>
+               </div>
+               <section id="2018c">
+                  <br/>
+                  <h3>2018</h3>
+                  <br/>
+                  <ol>
+                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
+                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
+                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
+                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
+                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
+                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
+                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
+                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
+                  </ol>
+               </section>
+               <section id="2017c">
+                  <br/>
+                  <h3>2017</h3>
+                  <br/>
+                  <ol>
+                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
+                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
+                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
+                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
+                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
+                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
+                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
+                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
+                  </ol>
+               </section>
+               <section id="2016c">
+                  <br/>
+                  <h3>2016</h3>
+                  <br/>
+                  <ol>
+                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
+                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
+                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
+                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
+                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
+                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
+                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
+                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
+                  </ol>
+               </section>
+            </section>
+         </div>
+      </div>
+   </div>
       <footer id="footer">
       </footer>
 
