--- a/publications.html
+++ b/publications.html
@@ -37,36 +37,31 @@
       <div class="row-fluid">
          <div class="span3 bs-docs-sidebar" id="navparent">
             <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
-               <li><a href="#published"> Journal Publications</a></li>
+               <li><a href="#published"> 期刊文献</a></li>
+               <li><a class="subhead" href="#2019"> 2019 </a></li>
                <li><a class="subhead" href="#2018"> 2018 </a></li>
-               <li><a class="subhead" href="#2017"> 2017 </a></li>
-               <li><a class="subhead" href="#2016"> 2016 </a></li>
+               <li><a class="subhead" href="#2017"> 2017及之前 </a></li>
                <li><a href="#inreview"> In Review and Preparation</a></li>
-               <li><a href="#refereed"> Papers and Presentations in Refereed Conference Proceedings</a></li>
-               <li><a class="subhead" href="#2018c"> 2018 </a></li>
-               <li><a class="subhead" href="#2017c"> 2017 </a></li>
-               <li><a class="subhead" href="#2016c"> 2016 </a></li>
             </ul>
          </div>
          <div class="span8 offset1">
             <section id="published">
                <div class="page-header">
-                  <h3>Journal Publications</h3>
+                  <h3>期刊文献</h3>
                </div>
-               <section id="2018">
-                  <h3>2018</h3>
+               <section id="2019">
+                  <h3>2019</h3>
                   <br/>
                   <div class="row-fluid">
                      <div class="span3">
-                        <a href="https://pubs.acs.org/journal/nalefd" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/nanoletters.2013.13.issue1.jpg" alt="Pellentesque Habitant Morbi Tristique Senectus Et"/>
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6592171/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/Theranostics.jpg" alt="Theranostics"/>
                         </a>
                      </div>
                      <div class="span9">
-                        <h4>Pellentesque Habitant Morbi Tristique Senectus Et</h4>
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6592171/">Combination Therapy of TGF-β Blockade and Commensal-derived Probiotics Provides Enhanced Antitumor Immune Response and Tumor Suppression</a>
                         <br/>
-                        <p>Q.E. Vulputate , E.R. Dictum, E.J. Pellentesque</p>
-                        <a href="https://pubs.acs.org/journal/nalefd">Pellentesque Habitant, in press, 2018</a>
+                        <p>Shi L, Sheng J, Wang M, Luo H, Zhu J, Zhang B, Liu Z, Yang X. Combination Therapy of TGF-β Blockade and Commensal-derived Probiotics Provides Enhanced Antitumor Immune Response and Tumor Suppression. Theranostics. 2019 May 31;9(14):4115-4129. doi: 10.7150/thno.35131. PMID: 31281535; PMCID: PMC6592171.</p>
                      </div>
                   </div>
                   <hr>
@@ -232,56 +227,6 @@
                </ol>
             </section>
             <hr>
-            <section id="refereed">
-               <div class="page-header">
-                  <h3>Papers and Presentations in Refereed Conference Proceedings</h3>
-               </div>
-               <section id="2018c">
-                  <br/>
-                  <h3>2018</h3>
-                  <br/>
-                  <ol>
-                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
-                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
-                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
-                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
-                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
-                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
-                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
-                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
-                  </ol>
-               </section>
-               <section id="2017c">
-                  <br/>
-                  <h3>2017</h3>
-                  <br/>
-                  <ol>
-                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
-                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
-                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
-                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
-                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
-                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
-                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
-                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
-                  </ol>
-               </section>
-               <section id="2016c">
-                  <br/>
-                  <h3>2016</h3>
-                  <br/>
-                  <ol>
-                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
-                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
-                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
-                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
-                     <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
-                     <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
-                     <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
-                     <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
-                  </ol>
-               </section>
-            </section>
          </div>
       </div>
    </div>
