--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,10 @@
          <hr>
          <div class="row-fluid">
             <div class="span12 marketing">
-                <h5>We are always looking for highly-motivated visiting scholars and PhD students, especially candidates interested in the area of Bioinformatics.</h5>
+                <h5>课题组长期招收硕博生，欢迎各校本科生/硕士生（特别是对有一定生物学科研基础、对研究感兴趣、思维活跃、英语读写能力较好的同学）保送和报考本实验室。课题组的学生会从基础理论、实验技能、文献阅读、仪器操作、论文写作等方面得到全方位训练。课题组以探索科学真理，追求科学精神为精神内核，主要培养将来具有独立工作能力的科研工作者，对于有志在科研上有所追求的同学们，我们期待你的加入！有意者请将个人简介发到邮箱！
+
+
+               </h5>
             </div>
             <div class="span12 content">
                <div class="row-fluid">
