--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@
                         <li><a href="gallery.html">风采</a></li>
                         <li><a href="software.html">常用链接</a></li>
                         <li><a href="teaching.html">实验室资源</a></li>
-                        <li><a href="contact.html">招聘</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
                      </ul>
                   </div>
                </div>
@@ -62,7 +62,7 @@
                         <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6592171/">Combination Therapy of TGF-β Blockade and Commensal-derived Probiotics Provides Enhanced Antitumor Immune Response and Tumor Suppression</a>
                         <br/>
                         <br/>
-                        <p>Shi L, Sheng J, Wang M, Luo H, Zhu J, Zhang B, Liu Z, Yang X. <br/>Theranostics. 2019 May 31;9(14):4115-4129.<br/> doi: 10.7150/thno.35131. PMID: 31281535; PMCID: PMC6592171.</p>
+                        <p>Shi L, Sheng J, Wang M, Luo H, Zhu J, Zhang B, Liu Z, Yang X. <br/>Theranostics. 2019 May 31;9(14):4115-4129.<br/> doi: 10.7150/thno.35131. PMID: 31281535.</p>
                         <p><b><a href="Indigenous bacteria.pdf">Download</a> </b></p>
                      </div>
                   </div>
@@ -222,10 +222,7 @@
                   <h3>In Review and Preperation</h3>
                </div>
                <ol>
-                  <li class="publication">A. Ipsum, N. Tristique, D.J. Lorem, E. Morbi, D.W. Eget, “Pellentesque Massa”, 2018.</li>
-                  <li class="publication">G. Augue, N. Massa, H. Turpis, X. Duis, S.V. Nunc, “Ipsum consequat nisl vel pretium lectus", 2018.</li>
-                  <li class="publication">D.J. Nunc, N. Massa, E.N. Dignissim, “Felis eget velit aliquet sagittis id consectetur purus ut faucibus”, 2018.</li>
-                  <li class="publication">P. Magna, Z. Malesuada, A. Maecenas, N. Vitae, “Duis convallis convallis tellus id interdum velit laoreet”, 2018.</li>
+                  <li class="publication">XXX</li>
                </ol>
             </section>
             <hr>
