--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
 			               <li><a href="gallery.html">风采</a></li>
                         <li><a href="software.html">常用链接</a></li>
                         <li><a href="teaching.html">实验室资源</a></li>
-                        <li><a href="contact.html">招聘</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
                      </ul>
                   </div>
                </div>
