--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
          <hr>
          <div class="row-fluid">
             <div class="span12 marketing">
-                <h5>课题组长期招收硕博生，欢迎各校本科生/硕士生（特别是对有一定生物学科研基础、对研究感兴趣、思维活跃、英语读写能力较好的同学）保送和报考本实验室。课题组的学生会从基础理论、实验技能、文献阅读、仪器操作、论文写作等方面得到全方位训练。课题组以探索科学真理，追求科学精神为精神内核，主要培养将来具有独立工作能力的科研工作者，对于有志在科研上有所追求的同学们，我们期待你的加入！有意者请将个人简介发到邮箱！
+                <h5>课题组长期招收硕博生，欢迎各校本科生/硕士生（特别是对有一定生物学科研基础、对研究感兴趣、思维活跃、英语读写能力较好的同学）保送和报考本实验室。实验室的成员会从基础理论、实验技能、文献阅读、仪器操作、论文写作等方面得到全方位的科研训练。课题组的主要目标是培养将来具有独立工作能力的科研工作者，对于有志在科研上有所追求的同学们，我们期待你的加入！有意者请将个人简介发到邮箱！
 
 
                </h5>
@@ -45,30 +45,23 @@
             <div class="span12 content">
                <div class="row-fluid">
                   <div class="span8">
-		    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1657.7870551038193!2d-84.3242774!3d33.7974946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f506f79fac5b37%3A0x657cc5514cde4e27!2s1518%20Clifton%20Rd%2C%20Druid%20Hills%2C%20GA%2030329!5e0!3m2!1sen!2sus!4v1576460740016!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+		    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1657.7870551038193!2d-84.3242774!3d33.7974946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f506f79fac5b37%3A0x657cc5514cde4e27!2s1518%20Clifton%20Rd%2C%20Druid%20Hills%2C%20GA%2030329!5e0!3m2!1sen!2sus!4v1576460740016!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>-->
                   </div>
                   <div class="span4">
                      <div class="box_cont">
-                        <h4>Address</h4>
-			<p>GCR 338<br>
-			   1518 Clifton Road Ne<br>
-			   Atlanta, Georgia 30322<br>
-			   United States 
+                        <h4>地址</h4>
+			<p>中国湖北省武汉市<br>
+			   洪山区高新大道666号<br>
+			   光谷生物城C4<br>
                         </p>
-			<a href="https://www.google.com/maps/place/1518+Clifton+Rd,+Druid+Hills,+GA+30329/@33.7974946,-84.3242774,18z/data=!4m8!1m2!2m1!1s1518+Clifton+Road+NE+,++Atlanta+,+GA+30322-4201!3m4!1s0x88f506f79fac5b37:0x657cc5514cde4e27!8m2!3d33.7974756!4d-84.323747">Show Map</a>
+			<a href="https://map.baidu.com/poi/%E5%8D%8E%E4%B8%AD%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6/@12737299.649079286,3549955.367365728,13.4z?uid=8cdfcee512b5793a28d7ab60&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl">地图</a>
                         <hr>
-                        <h4>Phone</h4>
-                        <p>Phone : (404) 712-9576<br>
-                           Fax : (404) 727-1370
+                        <h4>电话</h4>
+                        <p>电话: 027-87001156<br>
+                           传真: 027-87001156
                         </p>
-                        <a href="mailto:zhaohui.qin@emory.edu">Email Me</a>
+                        <a href="mailto:zhiliu@hust.edu.cn">zhiliu@hust.edu.cn</a>
                         <hr>
-                        <h4>Office Hours:</h4>
-                        <p>Monday Tuesday (9.00am - 11.00am)</p>
-                        <hr>
-                        <p><a href="https://scholar.google.com/citations?hl=en&user=9F-Jk74AAAAJ">Google Scholar</a></p>
-                        <p><a href="https://www.researchgate.net/profile/Zhaohui_Qin">ResearchGate</a></p>
-                        <br/>
                      </div>
                   </div>
                </div>
