--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,14 @@
                <div class="navbar-inner">
                   <div class="container">
                      <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="people.html">People</a></li>
-                        <li><a href="research.html">Research</a></li>
-                        <li><a href="publications.html">Publications</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-			<li><a href="software.html">Software</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
-                        <li class="active" ><a href="#">Join Us</a></li>
+                        <li><a href="index.html">主页</a></li>
+                        <li><a href="people.html">成员</a></li>
+                        <li><a href="research.html">研究</a></li>
+			<li><a href="publications.html">发表文献</a></li>
+			<li><a href="gallery.html">风采</a></li>
+         <li><a href="software.html">常用链接</a></li>
+         <li><a href="teaching.html">实验室资源</a></li>
+                        <li class="active" ><a href="#">联系我们</a></li>
                      </ul>
                   </div>
                </div>
