--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 			   洪山区高新大道666号<br>
 			   光谷生物城C4<br>
                         </p>
-			<a href="https://map.baidu.com/poi/%E5%8D%8E%E4%B8%AD%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6/@12737299.649079286,3549955.367365728,13.4z?uid=8cdfcee512b5793a28d7ab60&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl">地图</a>
+			<a href="https://map.baidu.com/search/%E5%85%89%E8%B0%B7%E7%94%9F%E7%89%A9%E5%9F%8E/@12744945.19314578,3544514.1,14.65z?querytype=s&da_src=shareurl&wd=%E5%85%89%E8%B0%B7%E7%94%9F%E7%89%A9%E5%9F%8E&c=218&src=0&pn=0&sug=0&l=13&b=(12721778.71143822,3542946.6939621842;12752820.586720351,3556964.040769272)&from=webmap&biz_forward=%7B%22scaler%22:2,%22styles%22:%22pl%22%7D&device_ratio=2">地图</a>
                         <hr>
                         <h4>电话</h4>
                         <p>电话: 027-87001156<br>
