--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                         <p>电话: 027-87001156<br>
                            传真: 027-87001156
                         </p>
-                        <a href="mailto:zhiliu@hust.edu.cn">zhiliu@hust.edu.cn</a>
+                        <a href="mailto:zhiliu@hust.edu.cn">邮箱：zhiliu@hust.edu.cn</a>
                         <hr>
                      </div>
                   </div>
